--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,53 @@
-.main {
-    font-size: 11px;
-    text-align: center;
 
+
+body{
+    margin: 8px;
 }
 
-.main a{
-    color: hsl(228, 45%, 44%);
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: rgba(213, 225, 239, 255);
+}
+
+.content-box{
+    width: 320px;
+    height: 480px;
+    background-color: white;
+    border-radius: 15px;
+}
+
+img{
+    padding: 15px;
+    width: 290px;
+    border-radius: 25px;
+}
+
+
+.info{
+    text-align: center;
+    padding: 0px 25px 25px 25px;
+}
+
+h1{
+    font-size: 20px;
+    font-family: "Outfit",sans-serif;
+    font-weight: 700;
+    margin-top: 5px;
+    
+}
+
+p{
+    font-size: 15px;
+    font-family: "Outfit",sans-serif;
+    font-weight: 400;
+    color: gray;
+}
+
+.footer{
+    font-size: 11px;
+    text-align: center;
 }
